--- a/ClusterKit.Monitoring/ClusterKit.Monitoring.Tests/packages.config
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring.Tests/packages.config
@@ -11,6 +11,8 @@
   <package id="Akka.TestKit.Xunit2" version="1.0.4" targetFramework="net46" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
+  <package id="ClusterKit.Core" version="0.0.0.29-master" targetFramework="net46" />
+  <package id="ClusterKit.Core.TestKit" version="0.0.0.29-master" targetFramework="net46" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="CommonServiceLocator.WindsorAdapter" version="1.0" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
@@ -22,6 +24,9 @@
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
+  <package id="Rx-Core" version="2.3.0-beta2" targetFramework="net46" requireReinstallation="true" />
+  <package id="Rx-Interfaces" version="2.3.0-beta2" targetFramework="net46" requireReinstallation="true" />
+  <package id="Rx-Linq" version="2.3.0-beta2" targetFramework="net46" requireReinstallation="true" />
   <package id="Serilog" version="1.5.11" targetFramework="net46" />
   <package id="StackExchange.Redis" version="1.0.481" targetFramework="net46" />
   <package id="xunit" version="2.1.0" targetFramework="net46" />
